Done with TransactionLogs tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,8 @@
         "set": "cpp",
         "__mutex_base": "cpp",
         "random": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "thread": "cpp"
     },
     "C_Cpp.dimInactiveRegions": false
 }
